Fix dialog shadow `z-index`

--- a/components/Dialog/styles.module.scss
+++ b/components/Dialog/styles.module.scss
@@ -27,7 +27,7 @@ dialog {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		z-index: -1;
+		z-index: -10;
 		top: 16px;
 		left: 16px;
 		padding: 2px;
